--- a/public/html/buildApi.html
+++ b/public/html/buildApi.html
@@ -12,20 +12,50 @@
 	<link rel="stylesheet" href="../css/common.css" />
 </head>
 <body>	
-	<div class="container-fluid">
-		<h1>打包App</h1>
-		<form>
-			<div class="form-group">
-		    	<label for="fileToUpload">选择压缩包</label>
-		    	<input type="file" id="fileToUpload">
-		  	</div>
-			<div class="formGroup">
-				<button id="buildIpa" type="submit" class="btn btn-default">打包</button>
-				<a href="javascript:;" id="downLoad" class="btn btn-info disabled">下载项目</a>
-				<button id="release" type='button' class="btn btn-info disabled">一键上传</button>
-			</div>
-		</form>
-	</div>
+<div class="wrapper">
+	<div class="tabtit relative"><h1>打包App</h1></div>
+	<form>
+		<table width="100%" cellspacing="0" cellpadding="0" border="0" class="tab-bd">
+			<colgroup>
+				<col width="20%">
+				<col>
+			</colgroup>
+			<tbody>
+				<tr>
+					<td class="text-rt td-gray-2"><label for="fileToUpload">选择压缩包</label></td>
+					<td><input type="file" id="fileToUpload"></td>
+				</tr>
+			</tbody>
+		</table>
+		<div class="formGroup">
+			<button id="buildIpa" type="submit" class="btn btn-info mr10">打包</button>
+			<a href="javascript:;" id="downLoad" class="btn btn-default disabled mr10">下载项目</a>
+			<button id="release" type='button' class="btn btn-default" data-toggle="modal" data-target="#myModal">一键上传</button>
+		</div>
+	</form>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">人员信息</h4>
+      </div>
+      <div class="modal-body">
+      <!--某个字段-->
+        <div class="lgi-item">
+		    <label for="userName" class="fm-label">用户名:</label>
+		    <input type="text" class="text" id="userName" placeholder="输入用户名">
+		 </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">取 消</button>
+        <button type="button" class="btn btn-primary">确 认</button>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 <script type="text/javascript">
 	//配置seajs根目录
