--- a/public/html/register.html
+++ b/public/html/register.html
@@ -11,28 +11,30 @@
 	<link rel="stylesheet" href="../framework/css/framework_main.css" />
 	<link rel="stylesheet" href="../css/common.css" />
 </head>
-<body>	
-	<div class="container-fluid">
-		<form role="form">
-			<div class="form-group">
-		    	<label for="userName">用户名:</label>
-		    	<input type="text" class="form-control require" id="userName" placeholder="输入用户名">
+<body class="lgibody">	
+<div class="lgi-info">
+	<div class="lgi-tit">研发打包系统注册</div>
+	<form role="form" class="lgi-input">
+			<div class="lgi-item">
+		    	<label for="userName" class="fm-label">用户名:</label>
+		    	<input type="text" class="text require" id="userName" placeholder="输入用户名">
 		 	</div>
-		  	<div class="form-group">
-		    	<label for="password">密码:</label>
-		    	<input type="password" class="form-control require" id="password" placeholder="输入密码">
+		  	<div class="lgi-item">
+		    	<label for="password" class="fm-label">密码:</label>
+		    	<input type="password" class="text require" id="password" placeholder="输入密码">
 		  	</div>
-		  	<div class="form-group">
-		    	<label for="email">邮箱:</label>
-		    	<input type="email" class="form-control require" id="email" placeholder="输入邮箱">
+		  	<div class="lgi-item">
+		    	<label for="email" class="fm-label">邮箱:</label>
+		    	<input type="email" class="text require" id="email" placeholder="输入邮箱">
 		  	</div>
-		  	<div class="form-group">
-		    	<label for="realName">真实姓名:</label>
-		    	<input type="text" class="form-control require" id="realName" placeholder="输入真实姓名">
+		  	<div class="lgi-item">
+		    	<label for="realName" class="fm-label">真实姓名:</label>
+		    	<input type="text" class="text require" id="realName" placeholder="输入真实姓名">
 		  	</div>
-		  	<button type="submit" class="btn btn-default">注册</button>
+		 	<div class="lgi-btn">
+				<button type="submit" class="lgibtn">注 册</button><a href="html/register.html" class="color-green">已有账号？直接登录</a>
+			</div>
 		</form>
-	</div>
 </body>
 <script>
 	/**
