--- a/public/html/uploadPlugin.html
+++ b/public/html/uploadPlugin.html
@@ -11,27 +11,35 @@
 	<link rel="stylesheet" href="../framework/css/framework_main.css" />
 	<link rel="stylesheet" href="../css/common.css" />
 </head>
-<body>	
-	<div class="container-fluid">
-		<h1>插件发布</h1>
-		<form id="pluginDetail">
-			<div class="form-group">
-		    	<label for="fileToUpload">选择插件</label>
-		    	<input type="file" id="fileToUpload">
-		  	</div>
-			<div class="formGroup">
-				<label>插件版本:</label>
-				<input type="text" class="form-control" id="pluginVersion">
-			</div>
-			<div class="formGroup">
-				<label>插件描述:</label>
-				<textarea id="pluginDescription" class="form-control" rows="3"></textarea>
-			</div>
-			<div class="formGroup">
-				<button id="publishPlugin" type="submit" class="btn btn-default">发布插件</button>
-			</div>
-		</form>
-	</div>
+<body>
+<div class="wrapper">
+	<div class="tabtit relative"><h1>插件发布</h1></div>
+	<form>
+		<table width="100%" cellspacing="0" cellpadding="0" border="0" class="tab-bd">
+			<colgroup>
+				<col width="20%">
+				<col>
+			</colgroup>
+			<tbody>
+				<tr>
+					<td class="text-rt td-gray-2"><label for="fileToUpload">选择插件</label></td>
+					<td><input type="file" id="fileToUpload"></td>
+				</tr>
+				<tr>
+					<td class="text-rt td-gray-2"><label for="fileToUpload">插件版本</label></td>
+					<td><input type="text" class="form-control" id="pluginVersion"></td>
+				</tr>
+				<tr>
+					<td class="text-rt td-gray-2"><label>插件描述</label></td>
+					<td><textarea id="pluginDescription" class="form-control" rows="3"></textarea></td>
+				</tr>
+			</tbody>
+		</table>
+		<div class="formGroup">
+			<button id="publishPlugin" type="submit" class="btn btn-info">发布插件</button>
+		</div>
+	</form>
+</div>
 </body>
 <script type="text/javascript">
 	//配置seajs根目录
