--- a/public/html/main.html
+++ b/public/html/main.html
@@ -12,10 +12,13 @@
 	<link rel="stylesheet" href="../css/common.css" />
 </head>
 <body>
-	<div class="container-fluid">
-		<a href="createProject.html" class="btn btn-info btn-lg btn-block">构建项目</a>
-		<a href="buildApi.html" class="btn btn-info btn-lg btn-block">打包</a>
-		<a href="uploadPlugin.html" class="btn btn-info btn-lg btn-block">插件发布</a>
-	</div>	
+<div class="wrapper">
+	<div class="list-group mainlist">
+	  <a href="createProject.html" class="list-group-item"><span class="glyphicon glyphicon-circle-arrow-right"></span><span class="glyphicon glyphicon-tasks"></span>构建项目</a>
+	  <a href="buildApi.html" class="list-group-item"><span class="glyphicon glyphicon-circle-arrow-right"></span><span class="glyphicon glyphicon-briefcase"></span>打包App</a>
+	  <a href="uploadPlugin.html" class="list-group-item"><span class="glyphicon glyphicon-circle-arrow-right"></span><span class="glyphicon glyphicon-share"></span>插件发布</a>
+	</div>
+</div>
+
 </body>
 </html>
