add return homelink

--- a/public/html/buildApi.html
+++ b/public/html/buildApi.html
@@ -13,7 +13,7 @@
 </head>
 <body>	
 <div class="wrapper">
-	<div class="tabtit relative"><h1>打包App</h1></div>
+	<div class="tabtit relative"><a href="main.html" class="returnhome"><span class="glyphicon glyphicon-circle-arrow-left"></span>  返回首页</a><h1>打包App</h1></div>
 	<form>
 		<table width="100%" cellspacing="0" cellpadding="0" border="0" class="tab-bd">
 			<colgroup>
