--- a/public/html/createProject.html
+++ b/public/html/createProject.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 	<div class="wrapper">
-		<div class="tabtit relative"><h1>构建项目</h1>请选择您需要得项目</div>
+		<div class="tabtit relative"><a href="main.html" class="returnhome"><span class="glyphicon glyphicon-circle-arrow-left"></span>  返回首页</a><h1>构建项目</h1>请选择您需要得项目</div>
 		<div class="row search-area">
 			<form class="navbar-form navbar-left" role="search" id="pluginSearch">
 	        	<div class="form-group">
