--- a/public/html/uploadPlugin.html
+++ b/public/html/uploadPlugin.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="wrapper">
-	<div class="tabtit relative"><h1>插件发布</h1></div>
+	<div class="tabtit relative"><a href="main.html" class="returnhome"><span class="glyphicon glyphicon-circle-arrow-left"></span>  返回首页</a><h1>插件发布</h1></div>
 	<form>
 		<table width="100%" cellspacing="0" cellpadding="0" border="0" class="tab-bd">
 			<colgroup>
@@ -36,7 +36,7 @@
 			</tbody>
 		</table>
 		<div class="formGroup">
-			<button id="publishPlugin" type="submit" class="btn btn-info">发布插件</button>
+			<button id="publishPlugin" type="submit" class="btn btn-info mr10">发布插件</button>
 		</div>
 	</form>
 </div>
